Added CSRF trusted origins to deployment and settings.

--- a/deploy/chp-api/values.yaml
+++ b/deploy/chp-api/values.yaml
@@ -20,6 +20,7 @@ fullnameOverride: ""
 app:
   debug: "0"
   secret_key: ""
+  djangoCSRFTrustedOrigins: ""
   djangoAllowedHosts: ""
   djangoSettingsModule: "chp_api.settings"
   djangoSuperuserUsername: "chp_admin"
