--- a/deploy/chp-api/templates/deployment.yaml
+++ b/deploy/chp-api/templates/deployment.yaml
@@ -72,6 +72,8 @@ spec:
               value: "{{ .Values.app.debug }}"
             - name: DJANGO_ALLOWED_HOSTS
               value: "{{ .Values.app.djangoAllowedHosts }}"
+            - name: CSRF_TRUSTED_ORIGINS
+              value: "{{ .Values.app.djangoCSRFTrustedOrigins }}"
             - name: DJANGO_SETTINGS_MODULE
               value: "{{ .Values.app.djangoSettingsModule }}"
             - name: DJANGO_SUPERUSER_USERNAME
